--- a/blog/styles/globals.css
+++ b/blog/styles/globals.css
@@ -32,3 +32,19 @@ img {
   max-width: 100%;
   display: block;
 }
+
+.navbar {
+  background-color: black;
+  font-style: italic;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+      "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1.3rem;
+  text-align: center;
+  
+}
+
+#link-style {
+  color: #639ee2;
+  font-weight: 400;
+  padding: 1rem;
+}
